biosensor (1.6.0) lucid; urgency=low

  * Implementation of adaptive time step adjuster.
  * Implementation of concentration oscillation stop condition.

 -- Karolis Petrauskas <k.petrauskas@gmail.com>  Thu, 02 Sep 2010 01:38:49 +0300

biosensor (0.5.1) lucid; urgency=low

  * Updated changelog

 -- Karolis Petrauskas <k.petrauskas@gmail.com>  Mon, 16 Aug 2010 00:05:54 +0300

biosensor (0.5.0) lucid; urgency=low

  * Implemented one-dimensional implicit solver.

 -- Karolis Petrauskas <k.petrauskas@gmail.com>  Mon, 16 Aug 2010 00:04:33 +0300

biosensor (0.4.3) lucid; urgency=low

  * Solver performance optimizations.

 -- Karolis Petrauskas <k.petrauskas@gmail.com>  Fri, 06 Aug 2010 05:14:50 +0300

biosensor (0.4.2) karmic; urgency=low

  * Small fixes in the build part. It was needed because of porting this
    application to Debian.

 -- Karolis Petrauskas <k.petrauskas@gmail.com>  Mon, 04 Jan 2010 23:22:09 +0200

biosensor (0.4.1) unstable; urgency=low

  * Fixes for reactions on a bound. Previous impmenentation had nothing in common with the mathematical part.
  * Fixed bugs regarding diffusion directions on the bounds.
  * Improved logging.

 -- Karolis Petrauskas <k.petrauskas@gmail.com>  Fri, 18 Dec 2009 18:41:03 +0200

biosensor (0.4.0) unstable; urgency=low

  * Source distrubution now also includes cxx/hxx generated from the XSD files.
  * Added program bio-output, it can calculate steady state current density and
    halftime from a current density file.
  * Added support for the overriding symbol values in the model using command line parameters.
  * Added support for different diffusion coefficients for different
    axes.
  * Simulation time is now written at the end of simulation.
  * Implemented additional functionality in the bio-output: ability to
    extract 1d data from 2d grid.
  * Implemented support for reactions on the bounds.
  * Improved support for RedOx reactions. It can now support more
    schemes, not only a+b->c+d.