@@ -2,8 +2,10 @@ biosensor (1.6.0) lucid; urgency=low
 
   * Implementation of adaptive time step adjuster.
   * Implementation of concentration oscillation stop condition.
+  * Removed raising of exception, if setting invalid concentration on
+    constant bound.
 
- -- Karolis Petrauskas <k.petrauskas@gmail.com>  Thu, 02 Sep 2010 01:38:49 +0300
+ -- Karolis Petrauskas <k.petrauskas@gmail.com>  Thu, 02 Sep 2010 19:11:07 +0300
 
 biosensor (0.5.1) lucid; urgency=low
 
